refactor cloudinary service